Добавлены эндпойнты для получения топ 10 популярных фильмов, подборок и рецензий